ingedients wczytuje się w formie listy