@@ -4,6 +4,7 @@ import com.example.recipes.domain.recipe.dto.RecipeFullInfoDto;
 import com.example.recipes.domain.recipe.dto.RecipeMainInfoDto;
 
 import java.util.Arrays;
+import java.util.stream.Collectors;
 
 class RecipeDtoMapper {
     static RecipeFullInfoDto mapFullInfo(Recipe recipe){
@@ -16,9 +17,9 @@ class RecipeDtoMapper {
                 recipe.getCookingTime(),
                 recipe.getServing(),
                 recipe.getDifficultyLevel().getName(),
-                recipe.getIngredients(),
-                // Zmiana dosłowne \n na rzeczywiste nowe linie
-                Arrays.stream(recipe.getDirections().replace("\\n", "\n").split("\\r?\\n")).map(String::trim).toList()
+                Arrays.stream(recipe.getIngredients().split("\\\\n")).map(String::trim).collect(Collectors.toList()),
+                // Zmiana dosłowne \n na rzeczywiste nowe liniespli replace.("\\n", "\n").split("\\n?\\r")
+                Arrays.stream(recipe.getDirections().split("\\\\n")).map(String::trim).collect(Collectors.toList())
         );
     }
 
